ncc/testsuite/negative/operators.n
module M {
  [Record]
  class X {}
  Main () : void
  {
    def _ = 1 * null; // E: right-hand side of
    def _ = "foo" + X(); // E: right-hand side of the `\+' operator was expected to have type string
    def _ = X() + "foo"; // E: left-hand side of the `\+' operator was expected to have type string
    ()
  }
}
